--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jshint-stylish": "^2.2.0"
   },
   "engines": {
-    "node": ">=4.0.0"
+    "node": ">=4.0.0",
+    "engineStrict": true
   }
 }
